day-10/voting-prod-like/network-policy-db.yaml
# Allow only worker pods to connect to Postgres (lab example)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-worker
  namespace: voting-dev
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    ports:
    - protocol: TCP
      port: 5432
